--- a/public/css/home.css
+++ b/public/css/home.css
@@ -34,7 +34,8 @@ body {
   background-image: url(https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/5baf8325-ed69-40b0-b9d2-d8c5d2bde3b0);
   background-repeat: no-repeat;
   background-size: cover;
-	/* background: #212140; */
+  zoom: 90%;
+  /* background: #212140; */
 }
 
 /* MAIN MENU */
@@ -239,12 +240,10 @@ main {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(
-    180deg,
-    transparent,
-    transparent,
-    rgba(3, 3, 185, 0.5)
-  );
+  background: linear-gradient(180deg,
+      transparent,
+      transparent,
+      rgba(3, 3, 185, 0.5));
   border-radius: 10px;
   transition: all 0.6s linear;
 }
@@ -296,11 +295,9 @@ main {
 
 .activity-one {
   background-color: rgb(124, 136, 224, 0.5);
-  background-image: linear-gradient(
-    240deg,
-    rgb(124, 136, 224) 0%,
-    #c3f4fc 100%
-  );
+  background-image: linear-gradient(240deg,
+      rgb(124, 136, 224) 0%,
+      #c3f4fc 100%);
 }
 
 .activity-two {
@@ -387,16 +384,20 @@ main {
 }
 
 @keyframes gelatine {
+
   0%,
   100% {
     transform: scale(1, 1);
   }
+
   25% {
     transform: scale(0.9, 1.1);
   }
+
   50% {
     transform: scale(1.1, 0.9);
   }
+
   75% {
     transform: scale(0.95, 1.05);
   }
@@ -576,13 +577,11 @@ main {
   position: relative;
   width: 80px;
   aspect-ratio: 1/1;
-  background: conic-gradient(
-    from 0deg,
-    #590b94 0%,
-    #590b94 0% var(--i),
-    #b3b2b2 var(--i),
-    #b3b2b2 100%
-  );
+  background: conic-gradient(from 0deg,
+      #590b94 0%,
+      #590b94 0% var(--i),
+      #b3b2b2 var(--i),
+      #b3b2b2 100%);
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -752,11 +751,11 @@ main {
     max-width: 60px;
     align-self: center;
   }
-	
-	.right-content {
-		grid-template-rows: 4% 20% 76%;
-		margin: 15px 15px 15px 0;
-	}
+
+  .right-content {
+    grid-template-rows: 4% 20% 76%;
+    margin: 15px 15px 15px 0;
+  }
 }
 
 @media (max-width: 1150px) {
@@ -776,7 +775,7 @@ main {
   }
 
   .personal-bests-container {
-		grid-template-rows: repeat(3, 70px);
+    grid-template-rows: repeat(3, 70px);
     gap: 10px;
   }
 
@@ -842,8 +841,8 @@ main {
 }
 
 @media (max-width: 1050px) {
-	 .right-content {
-      grid-template-rows: 4% 19% 37% 40%;
+  .right-content {
+    grid-template-rows: 4% 19% 37% 40%;
   }
 }
 
@@ -913,13 +912,13 @@ main {
 
   .left-content {
     grid-area: leftContent;
-		grid-template-rows: 45% 55%;
+    grid-template-rows: 45% 55%;
     padding: 10px 20px 10px;
   }
 
   .right-content {
     grid-area: rightContent;
-		grid-template-rows: 5% 40% 50%;
+    grid-template-rows: 5% 40% 50%;
     margin: 15px 15px 0 15px;
     padding: 10px 0 0;
     gap: 15px;
