--- a/public/css/home.css
+++ b/public/css/home.css
@@ -952,3 +952,56 @@ main {
     display: none;
   }
 }
+
+
+/* CSS TABLA */
+/* En tu archivo CSS */
+.incidencias-table {
+  width: 100%;
+  height: 725px;
+  border-collapse: collapse;
+  margin-bottom: 20px;
+  table-layout: fixed; /* Tamaño fijo para la tabla */
+}
+
+.incidencias-table caption {
+  font-size: 1.5em; /* Tamaño de fuente más grande */
+  font-weight: bold; /* Texto en negrita */
+  padding: 10px; /* Espaciado interno */
+  background-color: #f2f2f2; /* Fondo gris claro */
+  color: #333; /* Color de texto oscuro */
+  text-align: center; /* Centrar el texto */
+}
+
+.incidencias-table th,
+.incidencias-table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: center; /* Centrar el contenido */
+  overflow: hidden; /* Ocultar el contenido que sobresale */
+  white-space: nowrap; /* Evitar el salto de línea en el texto largo */
+}
+
+.incidencias-table th {
+  background-color: #f2f2f2;
+  font-weight: bold;
+}
+
+.incidencias-table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.incidencias-table tr:hover {
+  background-color: #ddd;
+}
+
+
+/* Agrega más estilos según tus necesidades */
+    /* Agrega estilos para la flecha */
+    #arrowIcon {
+      width: 30px;
+      height: 30px;
+      margin-left: 5px;
+      margin-top: 8px;
+      cursor: pointer; /* Agregar un cursor de apuntador */
+  }
