--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1005,3 +1005,43 @@ main {
       margin-top: 8px;
       cursor: pointer; /* Agregar un cursor de apuntador */
   }
+
+
+
+
+
+    /* Estilos para el select */
+    #estadoFiltro {
+      padding: 8px 12px; /* Espaciado interno */
+      font-size: 14px; /* Tamaño de fuente */
+      border: 1px solid #ccc; /* Borde */
+      border-radius: 4px; /* Bordes redondeados */
+      background-color: #fff; /* Fondo blanco */
+      appearance: none; /* Quitar la apariencia nativa del navegador */
+      -webkit-appearance: none; /* Para navegadores basados en WebKit como Chrome y Safari */
+      -moz-appearance: none; /* Para navegadores basados en Gecko como Firefox */
+      cursor: pointer; /* Cursor apuntador */
+      font-family: "Nunito", sans-serif; /* Fuente Nunito */
+      margin-left: 5px;
+  }
+
+  /* Estilos para las opciones del select */
+  #estadoFiltro option {
+      background-color: #fff; /* Fondo blanco */
+      color: #333; /* Color del texto */
+  }
+
+  /* Estilo cuando el select está enfocado */
+  #estadoFiltro:focus {
+      outline: none; /* Quitar el contorno al enfocar */
+      border-color: #66afe9; /* Cambiar color del borde al enfocar */
+      box-shadow: 0 0 5px rgba(102, 175, 233, 0.5); /* Sombra al enfocar */
+  }
+
+  .cerrar-incidencia {
+    width: 20px; /* Tamaño deseado */
+    height: auto; /* Mantener la proporción */
+    cursor: pointer; /* Cambiar el cursor al pasar por encima */
+    display: block; /* Asegurar que la imagen se muestre como un bloque */
+    margin: 0 auto; /* Centrar horizontalmente */
+}
