--- a/public/css/home.css
+++ b/public/css/home.css
@@ -497,10 +497,15 @@ main {
 /* USER INFO */
 
 .user-info {
+    margin-left: 40%;
     display: grid;
     grid-template-columns: 30% 55% 15%;
     align-items: center;
     padding: 0 10px;
+}
+
+.user-info img {
+    margin-left: 50%;
 }
 
 .icon-container {
