--- a/public/css/userhome.css
+++ b/public/css/userhome.css
@@ -33,7 +33,7 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-image: url(https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/5baf8325-ed69-40b0-b9d2-d8c5d2bde3b0);
+  background-image: url(https://fondosmil.co/fondo/531.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 	/* background: #212140; */
